# smart-tourism-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: 00_indice.md  02_arquitectura.md  03_modelo_ri.md  04_adquisicion_datos.md  05_indexacion.md  06_recuperador.md  07_base_vectorial.md  08_rag.md  09_busqueda_web.md  10_multimodal.md  12_interfaz.md  15_despliegue.md  16_manual_usuario.md  bibliografia.md
scripts/: download_wikivoyage.py  index_metrics.py  init_qdrant.py  init_qdrant_images.py  stats.py
src/: __init__.py  cli.py  config.py  logging_config.py  main.py
src/api/: main.py  middleware.py  schemas.py
tests/: conftest.py  test_api_ask.py  test_api_ask_stream.py  test_api_health.py  test_api_middleware.py  test_api_search.py  test_api_search_hybrid.py  test_api_search_semantic.py  test_boolean.py  test_build_index.py  test_embed_destinations.py  test_embedder.py  test_embedding_cache.py  test_extended_boolean.py  test_hybrid.py  test_images.py  test_index_metrics.py  test_ingestion.py  test_init_qdrant.py  test_inverted_index.py  test_merger.py  test_multimodal.py  test_normalize.py  test_opentripmap.py  test_persistence.py  test_preprocess.py  test_query_parser.py  test_rag_context_builder.py  test_rag_llm_client.py  test_rag_pipeline.py  test_rag_prompts.py  test_retrieval.py  test_robots.py  test_smoke.py  test_stemmer.py  test_stopwords.py  test_store.py  test_tfidf.py  test_tokenizer.py  test_ui_app.py  (+5 more)
(+36 files in other folders)
