[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-tourism-engine"
version = "0.1.0"
description = "Sistema de Recuperación de Información para Turismo"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "typer",
    "httpx",
    "nltk",
    "streamlit",
    "google-genai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "pytest-cov",
    "pytest-httpx",
    "pytest-asyncio",
    "ruff",
    "black",
    "isort",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []
